Fix bug where empty space was not affected by dark mode transition

--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -6,5 +6,6 @@
 .layout {
     max-width: 1100px;
     margin: 0 auto;
-    padding: 0 1.0875rem 1.45rem;
+    /* padding: 0 1.0875rem 1.45rem; */
+    padding: 0 1.0875rem;
 }
