--- a/src/pages/styles/about.module.css
+++ b/src/pages/styles/about.module.css
@@ -3,9 +3,10 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: calc(100vh - 80px);
+    height: 100vh;
     background-color: var(--color-background);
     transition: background-color 0.3s ease-in-out;
+    box-sizing: border-box;
 }
 
 .page__title {
@@ -76,7 +77,8 @@
 @media only screen and (min-width: 600px) {
     .page {
         align-items: flex-start;
-        height: calc(100vh - 100px);
+        /* height: calc(100vh - 100px); */
+        /* height: calc(100vh - 50px); */
     }
 
     .link {
