--- a/src/pages/styles/main.module.css
+++ b/src/pages/styles/main.module.css
@@ -6,6 +6,7 @@
     height: 100vh;
     background-color: var(--color-background);
     transition: background-color 0.3s ease-in-out;
+    box-sizing: border-box;
 }
 
 .brand__name {
